tests/invalid/type/throw_exception_call.pts
function main() : void {
    throw Exception("boom");
}
